<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>osqp_eigen_vendor</name>
  <version>0.0.0</version>
  <description>Vendor package for osqp-eigen https://github.com/robotology/osqp-eigen</description>
  <maintainer email="martin.huber@kcl.ac.uk">mhubii</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://github.com/robotology/osqp-eigen</url>
  <author email="martin.huber@kcl.ac.uk">mhubii</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>eigen3_cmake_module</buildtool_depend>
  <build_depend>eigen</build_depend>

  <depend>osqp_vendor</depend>

  <buildtool_export_depend>eigen3_cmake_module</buildtool_export_depend>
  <build_export_depend>eigen</build_export_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
